--- a/caravan/index.html
+++ b/caravan/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <title>CARAVAN</title>
   </head>
 
@@ -112,6 +112,15 @@
               <span class="category">Culture</span>
             </section>
           </div>
+        </div>
+        <div class="pagination">
+          <p><<</p>
+          <p><</p>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
+          <p>></p>
+          <p>>></p>
         </div>
       </section>  
       <div class="sidebar">
