--- a/1-9ensyuu1/1-9ensyuu1.html
+++ b/1-9ensyuu1/1-9ensyuu1.html
@@ -5,7 +5,7 @@
     
     <script src="https://kit.fontawesome.com/e45f6b53f0.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="1-9ensyuu.css">
+    <link rel="stylesheet" href="1-9ensyuu1.css">
     <title>1-9演習問題</title>
   </head>
 
